--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <div id="container"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
