--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title></title>
 </head>
 <body>
-  <div id="container"></div>
-  <script src="bundle.js"></script>
+
+  <div class='container' id="container">
+  </div>
+  <script src="/static/bundle.js"></script>
 </body>
 </html>
